<resources>
    <string name="app_name">CuteChat</string>
    <string name="ready">готово</string>
    <string name="verification">На вашу почту отправлено письмо для подтверждения</string>
    <string name="q_exit">Вы уверены, что хотите выйти?</string>
    <string name="yes">да</string>
    <string name="cancel">отмена</string>
    <string name="sended_msg">Отправлено письмо на почту для изменения пароля</string>
    <string name="success">OK</string>
    <string name="confirm_email">Подтвердите email</string>
    <string name="error">ошибка</string>
    <string name="empty">Заполнены не все поля!</string>
    <string name="passwd_dif">Пароли отличаются!</string>
    <string name="email">email</string>
    <string name="password">пароль</string>
    <string name="password2">повторите пароль</string>
    <string name="enter">войти</string>
    <string name="forget_passwd">Забыли пароль?</string>
    <string name="logout">выйти</string>
    <string name="registartion">Зарегистрироваться</string>
    <string name="username">имя пользователя</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="phone">телефон</string>
    <string name="add_phone">добавить телефон</string>
    <string name="no_posts">У вас еще нет постов. Нажмите + для добавления.</string>
    <string name="posts_title">Посты</string>
    <string name="hint_create_post">Введите текст</string>
    <string name="friends">Друзья</string>
    <string name="online">online</string>
    <string name="search_in_friends">Поиск в списке друзей</string>
    <string name="no_friends">Вы еще не добавили друзей. Попробуйте найти знакомых, нажав на иконку поиска в левом верхнем углу.</string>
    <string name="friens_1">друг</string>
    <string name="friend_2">друга</string>
    <string name="friends_5">друзей</string>
    <string name="search_friends">Поиск друзей</string>
    <string name="enter_name">Введите имя</string>
    <string name="no_users">Нет пользователей</string>
    <string name="requests">Заявки</string>
    <string name="no_comments">Комментарии отсутствуют</string>
    <string name="call">позвонить</string>
    <string name="hide">скрыть</string>
    <string name="dark_theme">темная тема </string>
    <string name="eng_lang">английский язык</string>
    <string name="account">Профиль</string>
    <string name="messages">Сообщения</string>
    <string name="wall">Стена</string>
    <string name="settings">Настройки</string>
    <string name="user_no_posts">У данного пользователя еще нет записей.</string>
</resources>
