<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSearchFriends"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/violet"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnSearchBack"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="12dp"
        android:background="@drawable/ic_arrow_back"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@id/toolbarSearchFriends"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/search_friends"
        android:textSize="22sp"
        android:textStyle="bold"
        android:paddingEnd="48dp"
        app:layout_constraintLeft_toRightOf="@id/btnSearchBack"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/toolbarSearchFriends"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/searchNewFriend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:visibility="gone"
        android:hint="@string/enter_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarSearchFriends" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearchedFriends"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchNewFriend"
        tools:listitem="@layout/item_friend_add" />

    <TextView
        android:id="@+id/noUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        android:text="@string/no_users"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchNewFriend"/>

</androidx.constraintlayout.widget.ConstraintLayout>